--- a/Samples/Google/Platform/BUILD
+++ b/Samples/Google/Platform/BUILD
@@ -2,69 +2,48 @@ load("//:tpm.bzl", "COPTS")
 package(default_visibility = ["//visibility:private"])
 
 cc_library(
-    name = "Headers",
-    hdrs = glob(["include/*.h"]),
+    name = "Platform",
+    hdrs = ["include/Platform.h"],
+    srcs = [
+        "include/Platform_fp.h",
+        "include/PlatformClock.h",
+        "include/PlatformData.h",
+        "Cancel.c",
+        "Clock.c",
+        "Entropy.c",
+        "LocalityPlat.c",
+        "NVMem.c",
+        "PlatformACT.c",
+        "PlatformData.c",
+        "PowerPlat.c",
+        "PPPlat.c",
+    ],
+    deps = [
+        "//:Headers",
+        "@boringssl//:crypto",
+    ],
     copts = COPTS,
     includes = ["include"],
     visibility = ["//:__pkg__"],
 )
 
 cc_library(
-    name = "Data",
-    hdrs = ["Data.h"],
-    srcs = ["Data.c"],
-    deps = ["//:Headers"],
-    copts = COPTS,
-)
-
-cc_library(
-    name = "Clock",
-    hdrs = ["Clock.h"],
-    srcs = ["Clock.c"],
-    deps = [
-        ":Headers",
-        ":Data",
-    ],
-    copts = COPTS,
-)
-
-cc_library(
-    name = "NVMem",
-    srcs = ["NVMem.c"],
-    deps = [
-        ":Headers",
-        ":Data",
-    ],
-    copts = COPTS,
-)
-
-cc_library(
-    name = "Stubs",
-    srcs = [
-        "ACT.c",
-        "Cancel.c",
-        "Entropy.c",
-        "Locality.c",
-        "NVMem.c",
-        "PPPlat.c",
-    ],
-    deps = [
-        ":Headers",
-        "@boringssl//:crypto",
-    ],
-    copts = COPTS,
-)
-
-cc_library(
-    name = "Platform",
+    name = "Start",
     hdrs = ["Start.h"],
     srcs = ["Start.c"],
     deps = [
-        ":Headers",
-        ":Data",
-        ":Clock",
-        ":NVMem",
-        ":Stubs",
+        ":Platform",
+        "//:_TPM_Hash",
+        "//:_TPM_Init",
+        "//:ExecCommand",
+        "//:Manufacture",
     ],
+    copts = COPTS,
+)
+
+cc_binary(
+    name = "Runner",
+    srcs = ["Runner.c"],
+    deps = [":Start"],
     copts = COPTS,
 )
